--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <link rel="shortcut icon" href="src/images/favicon.svg" type="image/x-icon">
     <link href="src/styles/output.css" rel="stylesheet">
     <link href="src/styles/custom.css" rel="stylesheet">
-    <script type="module" src="src/javascript/script.js"></script>
     <title>in.orbit</title>
 </head>
 <body class="font-inter bg-zinc-950">
@@ -276,5 +275,8 @@
 
     </main>
 
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1/locale/pt-br.js"></script>
+    <script src="src/javascript/script.js"></script>
 </body>
 </html>
