--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/locale/pt-br.js"></script>
-    <script src="src/javascript/script.js"></script>
-    <script src="src/javascript/eventsHandlers.js"></script>
+    <script type="module" src="src/javascript/script.js"></script>
+    <script type="module" src="src/javascript/eventsHandlers.js"></script>
 </body>
 </html>
