commit: width for javascript, no html

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
             <div class="grid gap-3 grid-rows-[20px_auto]">
                 <div class="col-span-2 w-full h-2 bg-zinc-900 rounded-full relative">
-                    <div class="w-[58%] h-2 bg-gradient-to-r from-pink-400 to-violet-500 rounded-full absolute z-[1] js-completedGoalBar"></div>
+                    <div class="h-2 bg-gradient-to-r from-pink-400 to-violet-500 rounded-full absolute z-[1] js-completedGoalBar"></div>
                 </div>
 
                 <p class="text-[0.75rem] tablet:text-[1rem] tablet:leading-[1.4rem] text-zinc-400">
