--- a/index.html
+++ b/index.html
@@ -173,26 +173,20 @@
 
                 <p class="text-[0.75rem] tablet:text-[1rem] tablet:leading-[1.4rem] text-zinc-400">
                     Você completou 
-                    <b class="font-normal text-zinc-100 js-completedGoalNumber">8</b>
+                    <b class="font-normal text-zinc-100 js-completedGoalNumber"></b>
                     de 
-                    <b class="font-normal text-zinc-100 js-totalGoalNumber">15</b> 
+                    <b class="font-normal text-zinc-100 js-totalGoalNumber"></b> 
                     metas nessa semana.
                 </p>
-                <p class="text-end text-xs tablet:text-[1rem] tablet:leading-[1.4rem] text-zinc-400 js-percentageCompletedGoal">
-                    58%
-                </p>
+                <p class="text-end text-xs tablet:text-[1rem] tablet:leading-[1.4rem] text-zinc-400 js-percentageCompletedGoal"></p>
             </div>
 
             <hr class="w-full border border-zinc-900">
 
             <div class="flex flex-wrap items-center gap-2">
-                <button class="flex items-center gap-2 px-3 py-2 rounded-[3.625rem] bg-zinc-950 border border-dashed border-zinc-800 text-[0.875rem] leading-[1rem] text-zinc-300 tablet:text-[1rem] tablet:leading-[1.4rem] js-buttonCompleteGoal js-goalFinish">
+                <button class="flex items-center gap-2 px-3 py-2 rounded-[3.625rem] bg-zinc-950 border border-dashed border-zinc-800 text-[0.875rem] leading-[1rem] text-zinc-300 tablet:text-[1rem] tablet:leading-[1.4rem] js-buttonCompleteGoal-0">
                     <img class="w-4 h-4 tablet:w-6 tablet:h-6" src="src/images/plus grey.svg" alt="sinal de mais">
-                    Acordar cedo
-                </button>
-                <button class="flex items-center gap-2 px-3 py-2 rounded-[3.625rem] border border-dashed border-zinc-800 text-[0.875rem] leading-[1rem] text-zinc-300 tablet:text-[1rem] tablet:leading-[1.4rem] js-buttonCompleteGoal">
-                    <img class="w-4 h-4 tablet:w-6 tablet:h-6" src="src/images/plus grey.svg" alt="sinal de mais">
-                    Estudar
+                    <span></span>
                 </button>
             </div>
 
@@ -213,18 +207,9 @@
                             <img class="w-4 h-4 tablet:w-5 tablet:h-5" src="src/images/circle checked.svg" alt="círculo ativo">
                             <p class="text-[0.875rem] leading-[1.25rem] text-zinc-400 tablet:text-[1rem] tablet:leading-[1.4rem]">
                                 Você completou 
-                                “<span class="font-normal text-zinc-100 js-titleGoalCompleted-1"></span>”
+                                “<span class="font-normal text-zinc-100 js-titleGoalCompleted-0"></span>”
                                 às 
-                                <span class="font-normal text-zinc-100 js-completedInfoHour-1"></span>
-                            </p>
-                        </figure>
-                        <figure class="flex items-center gap-2">
-                            <img class="w-4 h-4 tablet:w-5 tablet:h-5" src="src/images/circle checked.svg" alt="círculo ativo">
-                            <p class="text-[0.875rem] leading-[1.25rem] text-zinc-400 tablet:text-[1rem] tablet:leading-[1.4rem]">
-                                Você completou 
-                                “<span class="font-normal text-zinc-100 js-titleGoalCompleted-2"></span>”
-                                às 
-                                <span class="font-normal text-zinc-100 js-completedInfoHour-2"></span>
+                                <span class="font-normal text-zinc-100 js-completedInfoHour-0"></span>
                             </p>
                         </figure>
     
