commit: correct link

--- a/index.html
+++ b/index.html
@@ -222,8 +222,7 @@
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/locale/pt-br.js"></script>
 
     <script type="module" src="src/javascript/script.js"></script>
-    <script type="module" src="src/javascript/completed-goal.js"></script>
-    <script type="module" src="src/javascript/create-goal.js"></script>
+    <script type="module" src="src/javascript/goals.js"></script>
     <script type="module" src="src/javascript/events-handlers.js"></script>
 </body>
 </html>
