commit: remove code forgotten and remove link to file script.js

--- a/index.html
+++ b/index.html
@@ -193,24 +193,7 @@
                     Você ainda não completou nenhuma meta essa semana.
                 </p>
 
-                <section class="hidden js-completedGoal">
-
-                    <!-- <div class="flex flex-col justify-center gap-3 js-completeGoal">
-                        <h3 class="mb-1 text-[1.2rem] leading-[1.5rem] text-zinc-50 tablet:text-[1.4rem] tablet:leading-[2rem] js-dateGoal"></h3>
-    
-                        <figure class="flex items-center gap-2">
-                            <img class="w-4 h-4 tablet:w-5 tablet:h-5" src="src/images/circle checked.svg" alt="círculo ativo">
-                            <p class="text-[0.875rem] leading-[1.25rem] text-zinc-400 tablet:text-[1rem] tablet:leading-[1.4rem]">
-                                Você completou 
-                                “<span class="font-normal text-zinc-100 js-titleGoalCompleted-0"></span>”
-                                às 
-                                <span class="font-normal text-zinc-100 js-completedInfoHour-0"></span>
-                            </p>
-                        </figure>
-                    </div> -->
-
-                </section>
-
+                <section class="flex flex-col gap-6 js-containerInfoCompletedGoal"></section>
             </div>
            
         </section>
@@ -221,7 +204,6 @@
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/locale/pt-br.js"></script>
 
-    <script type="module" src="src/javascript/script.js"></script>
     <script type="module" src="src/javascript/goals.js"></script>
     <script type="module" src="src/javascript/events-handlers.js"></script>
 </body>
