--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 <button class="flex-1 flex items-center justify-center px-4 py-3 rounded-lg bg-zinc-900 font-medium text-[0.875rem] leading-[1rem] text-zinc-400" onclick="closeCreateGoal();">
                     Fechar
                 </button>
-                <button class="flex-1 flex items-center justify-center px-4 py-3 bg-violet-500 font-medium text-[0.875rem] leading-[1rem] text-violet-50 rounded-lg transition-all duration-75 hover:bg-violet-600 js-createGoalButton" type="submit" onclick="createGoal(event), closeCreateGoal(), barCompletedGoals();">
+                <button class="flex-1 flex items-center justify-center px-4 py-3 bg-violet-500 font-medium text-[0.875rem] leading-[1rem] text-violet-50 rounded-lg transition-all duration-75 hover:bg-violet-600 js-createGoalButton" type="submit" onclick="createGoal(event), barCompletedGoals();">
                     Salvar
                 </button>
             </div>
